--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "jade": "~1.11.0",
     "morgan": "~1.7.0",
     "mysql": "~2.13.0",
-    "serve-favicon": "~2.3.2",
-    "socket.io": "1.8.2"
+    "serve-favicon": "~2.3.2"
   }
 }
