--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
     "jade": "~1.11.0",
     "morgan": "~1.7.0",
     "mysql": "~2.13.0",
-    "serve-favicon": "~2.3.2"
+    "serve-favicon": "~2.3.2",
+    "passport": "0.3.2",
+    "passport-facebook":"2.1.1",
+    "facebook-sdk":"0.3.2",
+    "passport-facebook-token":"3.3.0"
   },
   "repository": {
     "type": "git",
