--- a/package.json
+++ b/package.json
@@ -10,20 +10,22 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "cool-ascii-faces": "1.3.4",
-    "ejs": "2.4.1",
-    "express": "4.13.3",
     "body-parser": "~1.16.0",
     "cookie-parser": "~1.4.3",
+    "cool-ascii-faces": "1.3.4",
     "debug": "~2.6.0",
+    "ejs": "2.4.1",
+    "express": "4.13.3",
+    "facebook-sdk": "0.3.2",
+    "google-auth-library": "^0.10.0",
     "jade": "~1.11.0",
     "morgan": "~1.7.0",
     "mysql": "~2.13.0",
-    "serve-favicon": "~2.3.2",
     "passport": "0.3.2",
-    "passport-facebook":"2.1.1",
-    "facebook-sdk":"0.3.2",
-    "passport-facebook-token":"3.3.0"
+    "passport-facebook": "2.1.1",
+    "passport-facebook-token": "3.3.0",
+    "serve-favicon": "~2.3.2",
+    "passport-google-oauth": "^0.2.0"
   },
   "repository": {
     "type": "git",
