--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "passport-facebook": "2.1.1",
     "passport-facebook-token": "3.3.0",
     "passport-google-oauth": "^0.2.0",
-    "serve-favicon": "~2.3.2"
+    "serve-favicon": "~2.3.2",
+    "passport-google-id-token":"0.4.0"
   },
   "repository": {
     "type": "git",
