--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "passport-facebook-token": "3.3.0",
     "passport-google-oauth": "^0.2.0",
     "serve-favicon": "~2.3.2",
-    "passport-google-id-token":"0.4.0"
+    "passport-google-id-token":"0.4.0",
+    "passport-local":"1.0.0",
+    "jwt-simple":"0.5.1"
   },
   "repository": {
     "type": "git",
