--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "debug": "~2.6.0",
     "ejs": "2.4.1",
     "express": "4.13.3",
+    "facebook-sdk": "0.3.2",
     "jade": "~1.11.0",
     "morgan": "~1.7.0",
     "mysql": "~2.13.0",
