--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "serve-favicon": "~2.3.2",
     "passport-google-id-token":"0.4.0",
     "passport-local":"1.0.0",
-    "jwt-simple":"0.5.1"
+    "jwt-simple":"0.5.1",
+    "passport-http-bearer":"1.0.1"
   },
   "repository": {
     "type": "git",
