--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "passport-google-id-token":"0.4.0",
     "passport-local":"1.0.0",
     "jwt-simple":"0.5.1",
-    "passport-http-bearer":"1.0.1"
+    "passport-http-bearer":"1.0.1",
+    "jsonwebtoken":"7.3.0"
   },
   "repository": {
     "type": "git",
