--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "passport-local":"1.0.0",
     "jwt-simple":"0.5.1",
     "passport-http-bearer":"1.0.1",
-    "jsonwebtoken":"7.3.0"
+    "jsonwebtoken":"7.3.0",
+    "express-jwt":"5.1.0"
+
   },
   "repository": {
     "type": "git",
