--- a/package.json
+++ b/package.json
@@ -13,25 +13,26 @@
     "body-parser": "~1.16.0",
     "cookie-parser": "~1.4.3",
     "cool-ascii-faces": "1.3.4",
+    "crypto": "0.0.3",
     "debug": "~2.6.0",
     "ejs": "2.4.1",
     "express": "4.13.3",
+    "express-jwt": "5.1.0",
     "facebook-sdk": "0.3.2",
     "jade": "~1.11.0",
+    "jsonwebtoken": "7.3.0",
+    "jwt-simple": "0.5.1",
     "morgan": "~1.7.0",
+    "multer": "^1.3.0",
     "mysql": "~2.13.0",
     "passport": "0.3.2",
     "passport-facebook": "2.1.1",
     "passport-facebook-token": "3.3.0",
+    "passport-google-id-token": "0.4.0",
     "passport-google-oauth": "^0.2.0",
-    "serve-favicon": "~2.3.2",
-    "passport-google-id-token":"0.4.0",
-    "passport-local":"1.0.0",
-    "jwt-simple":"0.5.1",
-    "passport-http-bearer":"1.0.1",
-    "jsonwebtoken":"7.3.0",
-    "express-jwt":"5.1.0"
-
+    "passport-http-bearer": "1.0.1",
+    "passport-local": "1.0.0",
+    "serve-favicon": "~2.3.2"
   },
   "repository": {
     "type": "git",
