--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "bcrypt": "^1.0.2",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "~1.16.0",
     "cookie-parser": "~1.4.3",
     "cool-ascii-faces": "1.3.4",
@@ -20,11 +22,13 @@
     "express-jwt": "5.1.0",
     "facebook-sdk": "0.3.2",
     "jade": "~1.11.0",
+    "jimp": "^0.2.27",
     "jsonwebtoken": "7.3.0",
     "jwt-simple": "0.5.1",
     "morgan": "~1.7.0",
     "multer": "^1.3.0",
     "mysql": "~2.13.0",
+    "node-gyp": "^3.6.0",
     "passport": "0.3.2",
     "passport-facebook": "2.1.1",
     "passport-facebook-token": "3.3.0",
@@ -32,6 +36,7 @@
     "passport-google-oauth": "^0.2.0",
     "passport-http-bearer": "1.0.1",
     "passport-local": "1.0.0",
+    "rebuild": "^0.1.2",
     "serve-favicon": "~2.3.2"
   },
   "repository": {
